Update(gears): fix spacing, gradient

--- a/src/app/gears/gears.component.css
+++ b/src/app/gears/gears.component.css
@@ -1,14 +1,18 @@
 .header-container {
-  background-color: rgba(194, 192, 192, 0.65);
+  background: linear-gradient(#a4a3a3, #fff);
+  /* background-color: rgba(194, 192, 192, 0.65); */
   padding: 2rem;
   margin-bottom: 2rem;
 }
 
+.gears {
+  margin: 10px;
+}
 
-.margin-badge {
-  margin-right: 15px;
-  float:inline-right;
-  padding: 10px;
+
+
+.badge {
+  margin: 5px;
 }
 
 .container.spaced {
